--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,19 @@
+body{
+    background-color: #333;
+}
+
 .main p {
     font-weight: 500;
     margin-top: 10px;
-    color: #333;
-    font-size: 20px;
+    color: #fff !important;
+    font-size: 20px !important;
 }
 
-#div1 {
+.col-6{
+    height: 290px;
+}
+
+#div1,#div2 {
     width: 100%;
     height: 250px;
     padding: 10px;
@@ -18,5 +26,8 @@
 }
 
 .text-center p{
+    margin-top: 20px;
     color: #fff;
+    font-size: 30px;
+    font-weight: 500;
 }
